--- a/index.html
+++ b/index.html
@@ -1,77 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Soluciones de datos, nube, software y aplicaciones móviles.">
-    <title>Two Solution - Soluciones de Inversiones y Tecnología</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Mi App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <!-- Cabecera -->
-    <header>
-        <div class="logo">
-            <img src="images/logo.png" alt="Two Solution Logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#testimonios">Testimonios</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Sección de bienvenida -->
-    <section id="bienvenida">
-        <div class="contenido">
-            <h1>Bienvenido a Two Solution</h1>
-            <p>Brindamos soluciones innovadoras en inversiones, nube, datos, software y aplicaciones móviles para ayudar
-                a tu negocio a crecer.</p>
-            <a href="#servicios" class="cta">Descubre más</a>
-        </div>
-    </section>
-
-    <!-- Sección de servicios -->
-    <section id="servicios">
-        <h2>Servicios que Ofrecemos</h2>
-        <div class="servicios">
-            <div class="servicio">
-                <h3>Inversiones</h3>
-                <p>Te ayudamos a invertir en tecnologías emergentes y soluciones disruptivas para que tu empresa crezca.</p>
-            </div>
-            <div class="servicio">
-                <h3>Soluciones en la Nube</h3>
-                <p>Implementamos soluciones en la nube para almacenar, procesar y analizar datos de forma eficiente.</p>
-            </div>
-            <div class="servicio">
-                <h3>Desarrollo de Software</h3>
-                <p>Desarrollamos aplicaciones personalizadas y software que optimizan tus operaciones y procesos comerciales.</p>
-            </div>
-            <div class="servicio">
-                <h3>Aplicaciones Móviles</h3>
-                <p>Creamos aplicaciones móviles innovadoras que se integran perfectamente con tu infraestructura tecnológica.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Testimonios -->
-    <section id="testimonios">
-        <h2>Lo que dicen nuestros clientes</h2>
-        <div class="testimonios">
-            <p>"Gracias a Two Solution, nuestro proceso de inversión ha sido más ágil y eficiente. ¡Altamente recomendados!" - Cliente 1</p>
-            <p>"La solución en la nube que nos implementaron ha transformado completamente nuestra forma de trabajar." - Cliente 2</p>
-        </div>
-    </section>
-
-    <!-- Pie de página -->
-    <footer id="contacto">
-        <p>&copy; 2025 Two Solution. Todos los derechos reservados.</p>
-        <p>Contáctanos: <a href="mailto:contacto@twosolution.com">contacto@twosolution.com</a></p>
-    </footer>
+    <h1>Bienvenido a mi aplicación web</h1>
+    <p>¡Esta es mi aplicación!</p>
+    <script src="app.js"></script>
 </body>
-
 </html>
